created error message in html and css

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,3 +1,17 @@
+@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+.isa_error {
+  margin: 10px 0px;
+  padding:12px;
+  }
+.isa_error {
+  color: rgb(190, 25, 33);
+  background-color: #FFD2D2;
+  }
+.isa_error i {
+  margin:10px 22px;
+  font-size:2em;
+  vertical-align: middle;
+  }
 form textarea {
   color: rgb(65, 63, 63);
   background: transparent;
