--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -30,6 +30,7 @@ body {
   top: 0;
   right: 0;
   left: 0;
+  
  }
 
  main {
@@ -39,3 +40,15 @@ body {
    padding-bottom: 50px;
   
  }
+ /* Tablet: minimum width of 768px to maximum width of 1024px */
+ @media only screen and (min-width: 1024px) {
+  .container {
+    width: 65%; 
+    float: right;
+    
+    padding-left: 5%;
+    padding-right: 10%;
+    margin-top: 10%;
+  }
+ 
+}
