--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -31,12 +31,12 @@
   font-size: 17px;
 }
 .arrow-button {
-  color: rgb(59, 61, 160);
+  color: #be520a;
   font-size: 35px;
   
 }
 .arrow-button:hover {
-  color: #be520a;
+  color: rgb(59, 61, 160); 
   position: relative;
   top: -5px;
 }
@@ -47,5 +47,6 @@
     height: 450px;
     margin: 3%;
     margin-top: 12.5%;
+    border-radius: 20px;
   }
 }
