--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -29,6 +29,7 @@ form input {
   background-color: #4056A1;
   color: white;
   font-family: 'Bungee', cursive;
+  border-radius: 5px;
 }
 
 .counter {
